# dropdesigner

./: .gitignore  pyproject.toml  streamlitapp.py
data/rubicons/: flumegates.sqlite  flumegates.xlsx
src/dropdesigner/: __init__.py  dropdesigner.py  flowcalc.py  loader.py  paths.py  solver.py
