[project]
name = "dropdesigner"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "rmachado24", email = "ryanmachado2000@hotmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "openpyxl>=3.1.5",
    "pydantic>=2.13.4",
    "rich>=15.0.0",
    "scipy>=1.17.1",
    "streamlit>=1.57.0",
    "typer>=0.26.2",
]

[project.scripts]
dropdesigner = "dropdesigner:main"

[build-system]
requires = ["uv_build>=0.11.15,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pyright>=1.1.409",
    "pytest>=9.0.3",
    "ruff>=0.15.14",
]

[tool.uv.workspace]
members = [
    "dropdesigner",
]
